--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav ms-auto gap-md-5">
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#"
+								<a class="nav-link active" aria-current="page" href="index.html"
 									>Beranda</a
 								>
 							</li>
@@ -57,13 +57,13 @@
 								<a class="nav-link" href="#">Artikel</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Acara</a>
+								<a class="nav-link" href="acara.html">Acara</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="#">Layanan</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Kontak</a>
+								<a class="nav-link" href="kontak.html">Kontak</a>
 							</li>
 						</ul>
 					</div>
@@ -195,7 +195,7 @@
 		</section>
 
 		<!-- TENTANG KAMI SECTION -->
-		<section class="tentang-kami container-xl height-md-100vh">
+		<section class="tentang-kami container-xl height-md-100v my-5 my-lg-0">
 			<h2 class="display-4 mb-5 fw-medium">Tentang Kami</h2>
 			<div class="row justify-content-center">
 				<div class="col-md-6">
@@ -222,7 +222,7 @@
 						mengeluarkan isi pikiranmu atau masalah kamu yang sedang dihadapi.
 					</p>
 					<a
-						href="#"
+						href="tentang-kami.html"
 						class="
 							btn btn-green
 							text-white
@@ -606,7 +606,7 @@
 						"
 					>
 						<!-- LEFT SIDE PICTURE -->
-						<div class="flex flex-column mt-5 pt-5">
+						<div class="flex flex-column mt-5 mb-3 pt-5">
 							<div class="card-testimonial-full bg-medium-green text-white">
 								<div class="card-img bg-green rounded-circle"></div>
 								<div
@@ -850,7 +850,7 @@
 				},
 			});
 			$(".nonloop").owlCarousel({
-				center: true,
+				center: false,
 				items: 2,
 				loop: false,
 				margin: 10,
