--- a/layanan.html
+++ b/layanan.html
@@ -16,8 +16,8 @@
 		<link
 			rel="icon"
 			href="./assets/logo/logo-hidup.png"
+			type="image/x-icon"
 			sizes="16x8"
-			type="image/x-icon "
 		/>
 		<!-- IMPORT MATERIAL ICONS -->
 		<link
@@ -26,16 +26,22 @@
 		/>
 
 		<!-- IMPORT CSS LOCAL -->
-		<link rel="stylesheet" href="./src/main.css" />
+		<link
+			rel="preload"
+			href="dist/main.css"
+			as="style"
+			onload="this.onload=null;this.rel='stylesheet'"
+		/>
+		<noscript><link rel="stylesheet" href="dist/main.css" /></noscript>
 
 		<link
 			rel="stylesheet"
-			href="./src/owl-carousel/assets/owl.carousel.min.css"
+			href="src/owl-carousel/assets/owl.carousel.min.css"
 		/>
 
 		<link
 			rel="stylesheet"
-			href="./src/owl-carousel/assets/owl.theme.default.css"
+			href="src/owl-carousel/assets/owl.theme.default.css"
 		/>
 
 		<title>Layanan Hidup</title>
@@ -109,7 +115,9 @@
 				<div
 					class="row align-items-center justify-content-between gap-6 gap-lg-0"
 				>
-					<div class="col-lg-6 mx-auto">
+					<div
+						class="col-lg-6 mx-auto d-flex flex-column justify-content-center align-items-center text-center d-md-block text-md-start"
+					>
 						<h2 class="display-6 text-left my-2 fw-medium">Konseling</h2>
 						<p class="my-3">
 							Memberi bantuan secara psikologis yang dilakukan oleh partner
@@ -127,6 +135,9 @@
 						</a>
 					</div>
 					<div class="col-lg-4">
+						<h2 class="fs-4 text-center fw-semi-bold text-left mb-3 fw-medium">
+							Layanan konseling Hidup telah tersebar ke beberapa kota :
+						</h2>
 						<div class="owl-carousel owl-theme mb-8 mb-lg-0">
 							<div class="item">
 								<div class="card-lokasi text-white d-flex">
@@ -172,13 +183,9 @@
 		<section class="konseling-sebaya height-md-75vh d-flex py-5 py-lg-0">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
-						<img
-							class="img-fluid"
-							src="./assets/img/ilustrasi/konseling-page.png"
-						/>
-					</div>
-					<div class="col-md-6 align-self-center">
+					<div
+						class="col-md-6 d-flex flex-column justify-content-center align-items-center text-center d-md-block text-md-start align-self-center"
+					>
 						<h2 class="display-6 text-right my-2 fw-medium">
 							Konseling Sebaya
 						</h2>
@@ -194,6 +201,12 @@
 							Daftar Sekarang
 						</a>
 					</div>
+					<div class="col-md-6 order-md-last mt-4 mt-md-0">
+						<img
+							class="img-fluid"
+							src="./assets/img/ilustrasi/konseling-page.png"
+						/>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -202,8 +215,10 @@
 			class="supporting-group height-md-75vh d-flex bg-light-green mt-8 py-5 py-lg-0"
 		>
 			<div class="container">
-				<div class="row justify-content-end">
-					<div class="col-md-5 align-self-center">
+				<div class="row justify-content-md-end">
+					<div
+						class="col-md-5 d-flex flex-column justify-content-center align-items-center text-center d-md-block text-md-start align-self-center"
+					>
 						<h2 class="display-6 text-right fw-medium">Supporting Group</h2>
 						<p class="my-6">
 							Group untuk sesama penyintas. Disini kalian bisa saling
@@ -217,7 +232,7 @@
 							Join Grup Whatsapp
 						</a>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 mt-4 mt-md-0">
 						<img
 							class="img-fluid"
 							src="./assets/img/ilustrasi/supporting-group-page.png"
