memperbaiki js halaman utama

--- a/index.html
+++ b/index.html
@@ -698,6 +698,8 @@
 		</script>
 		<!-- IMPORT JAVASCRIPT LOCAL -->
 		<script src="./src/js/index.js"></script>
+		<script src="./src/js/scrollToTop.js"></script>
+		<script src="./src/js/navbar.js"></script>
 		<!-- IMPORT JAVASCRIPT BOOTSTRAP-->
 		<script src="./src/bootstrap/dist/js/bootstrap.min.js"></script>
 	</body>
